@@ -6,13 +6,6 @@ use std::ops::Neg;
 use std::{f32, f64};
 
 use crate::scalar::{Field, RealField, SubsetOf, SupersetOf};
-#[cfg(all(
-    any(target_arch = "nvptx", target_arch = "nvptx64"),
-    not(feature = "std"),
-    not(feature = "libm_force"),
-    feature = "cuda"
-))]
-use cuda_std::GpuFloat;
 #[cfg(all(not(feature = "std"), not(feature = "libm_force"), feature = "libm"))]
 use num::Float;
 //#[cfg(feature = "decimal")]
@@ -491,17 +484,6 @@ impl_complex!(
 impl_complex!(
     f32,f32,f32;
     f64,f64,f64
-);
-
-#[cfg(all(
-    any(target_arch = "nvptx", target_arch = "nvptx64"),
-    not(feature = "std"),
-    not(feature = "libm_force"),
-    feature = "cuda"
-))]
-impl_complex!(
-    f32, f32, GpuFloat;
-    f64, f64, GpuFloat
 );
 
 #[cfg(feature = "libm_force")]
